--- a/src/components/TodoAddForm/todoaddform.css
+++ b/src/components/TodoAddForm/todoaddform.css
@@ -1,4 +1,16 @@
-[data-component="TodoAddForm"] {
+.todoaddform-bgbtn {
+    position: absolute;
+    background: transparent;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    border: none;
+    z-index: 61;
+}
+
+.todoaddform-fgarea {
+    position: relative;
     width: 230px;
     background: #FFFFFF;
     box-shadow: 0 1px 30px rgba(224, 224, 224, 0.3);
@@ -6,9 +18,10 @@
     margin-bottom: 10px;
     padding: 10px;
     border: 1px solid transparent;
+    z-index: 62;
 }
 
-[data-component="TodoAddForm"] input[type=text] {
+.todoaddform-fgarea input[type=text] {
     background: transparent;
     outline: none;
     padding: 0;
@@ -20,7 +33,7 @@
     line-height: 23px;
 }
 
-[data-component="TodoAddForm"] textarea {
+.todoaddform-fgarea textarea {
     background: transparent;
     font-family: inherit;
     width: 100%;
@@ -34,7 +47,7 @@
     line-height: 20px;
 }
 
-[data-component="TodoAddForm"] div {
+.todoaddform-fgarea div {
     display: inline-flex;
     width: 100%;
 }
