--- a/src/components/TodoAddForm/todoaddform.css
+++ b/src/components/TodoAddForm/todoaddform.css
@@ -1,5 +1,5 @@
 .todoaddform-bgbtn {
-    position: absolute;
+    position: fixed;
     background: transparent;
     left: 0;
     top: 0;
@@ -10,6 +10,7 @@
 }
 
 .todoaddform-fgarea {
+    outline: 1px solid #0075DE;
     position: relative;
     width: 230px;
     background: #FFFFFF;
@@ -17,7 +18,6 @@
     border-radius: 6px;
     margin-bottom: 10px;
     padding: 10px;
-    border: 1px solid transparent;
     z-index: 62;
 }
 
