--- a/src/components/TodoCard/todocard.css
+++ b/src/components/TodoCard/todocard.css
@@ -1,11 +1,14 @@
 [data-component="TodoCard"] {
     width: 230px;
     background: #FFFFFF;
-    box-shadow: 0 1px 30px rgba(224, 224, 224, 0.3);
+    box-shadow: 0 1px 30px rgba(224, 224, 224, 0.5);
     border-radius: 6px;
     margin-bottom: 10px;
     padding: 10px;
-    border: 1px solid transparent;
+}
+
+.edit[data-component="TodoCard"] {
+    outline: 1px solid #0075DE;
 }
 
 .todocard-header {
@@ -51,11 +54,6 @@
     margin: 0;
 }
 
-.todocard-btn-area {
-    display: flex;
-    width: 100%;
-}
-
 .todocard-edit-cancel, .todocard-edit-ok {
     display: table-cell;
     height: 40px;
@@ -71,16 +69,33 @@
 }
 
 .todocard-bgbtn {
+    display: none;
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100vh;
     border: none;
     background: transparent;
     z-index: 70;
 }
 
-.todocard-dblclick-area {
+.edit .todocard-bgbtn {
+    display: block;
+    width: 100%;
+    height: 100vh;
+}
+
+.edit .todocard-dblclick-area {
     position: relative;
+    z-index: 71;
+}
+
+.todocard-btn-area {
+    overflow: hidden;
+    display: flex;
+    width: 100%;
+    height: 0;
+}
+
+.edit .todocard-btn-area {
+    height: auto;
 }
