Refactor: DragManager CustomEvent 기반 리팩터링
dragover 에 해당하는 dragEventTypes.COLLAPSED, dragend 에 해당하는 dragEventTypes.END 존재

문제는 칼럼 간 이동 후 어떻게 칼럼을 업데이트 할 것인가?

--- a/src/components/TodoCard/todocard.css
+++ b/src/components/TodoCard/todocard.css
@@ -89,6 +89,10 @@
     z-index: 71;
 }
 
+.todocard-dblclick-area > * {
+    width: 100%;
+}
+
 .todocard-btn-area {
     overflow: hidden;
     display: flex;
