--- a/css/sidemenu.css
+++ b/css/sidemenu.css
@@ -5,7 +5,7 @@
     height: 100%;
     top: 0%;
     right: -25%;
-    transition: all 1s ease-in-out;
+    transition: all .7s ease-in-out;
     
     background: #FFFFFF;
     
