--- a/css/card.css
+++ b/css/card.css
@@ -23,6 +23,10 @@
     flex-grow: 0;
 }
 
+.ColumnCards:hover > div.CardBody > i.fa-pencil{
+    display: flex;
+}
+
 .ColumnCards > div.CardTitle{
     height: 23px;
     display: flex;
@@ -33,6 +37,23 @@
 
     color: #010101;
 
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+.ColumnCards > div.CardTitle > input{
+    width: 276px;
+    height: 24px;
+    
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
+    margin: 0px 0px 10px 0px;
+    
+    color: #010101;
+    border: none;
+    
     flex: none;
     order: 0;
     flex-grow: 0;
@@ -74,7 +95,7 @@
 }
 
 .ColumnCards > div.CardBody > i.fa-pencil{
-    display: flex;
+    display: none;
     margin-left: auto;
     color: #828282;
     cursor: pointer;
@@ -98,7 +119,7 @@
 }
 
 .NewCard{
-    display: flex;
+    display: block;
     flex-direction: column;
     align-items: flex-start;
     padding: 16px;
@@ -158,11 +179,11 @@
 
 .NewCard > div.CardButton{
     display: flex;
+    justify-content: space-between;
+    flex-direction: row;
 }
 
 .NewCard > div.CardButton > button.CardCancel{
-    flex-direction: row;
-    align-items: flex-start;
     padding: 10px;
     gap: 10px;
     
@@ -191,15 +212,12 @@
 }
 
 .NewCard > div.CardButton > button.CardRegister{
-    flex-direction: row;
-    align-items: flex-start;
     padding: 10px;
     gap: 10px;
     
     width: 134px;
     height: 40px;
     
-    margin-left: auto;
     background: #0075DE;
     border-radius: 6px;
     cursor: pointer;
@@ -223,42 +241,6 @@
 }
 
 .NewCard > div.CardButton > button.CardRegister:enabled:hover{
-    background: #00529B;
-}
-
-.NewCard > div.CardButton > button.ModifyCard{
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 10px;
-    gap: 10px;
-    
-    width: 134px;
-    height: 40px;
-    
-    margin-left: auto;
-    background: #0075DE;
-    border-radius: 6px;
-    cursor: pointer;
-
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 20px;
-    text-align: center;
-
-    color: #FFFFFF;
-    
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-}
-
-.NewCard > div.CardButton > button.ModifyCard:disabled{
-    background: #86C6FF;
-    color: rgba(255, 255, 255, 0.4);
-    cursor: default;
-}
-
-.NewCard > div.CardButton > button.ModifyCard:enabled:hover{
     background: #00529B;
 }
 
