--- a/css/card.css
+++ b/css/card.css
@@ -221,21 +221,18 @@
     background: #00529B;
 }
 
-.FloatingBox{
-    align-items: flex-start;
-    padding: 16px;
-    margin: 20px 0px 20px 0px;
+.ShadowCard{
+    opacity: 0.4;
+    border: 1px solid #0075de;
+    box-shadow: 0px 1px 30px rgba(224, 224, 224, 0.3);
+}
 
-    width: 308px;
-
-    background: rgba(255, 255, 255, 0.8);
-    
+.FloatingCard{
+    position: absolute;
+    z-index: 1000;
+    opacity: 0.8;
     box-shadow: 0px 0px 4px rgba(204, 204, 204, 0.5), 0px 2px 4px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(2px);
-    
-    border-radius: 6px;
-
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+    margin: 0px 0px 0px 0px;
+    cursor: move;
 }
