--- a/css/column.css
+++ b/css/column.css
@@ -7,8 +7,7 @@
 
 .ColumnList{
     margin-right: 1%;
-    height: 700px;
-    overflow-y: auto;
+    height: 80vh;
     float: left;
     flex-direction: column;
     align-items: center;
@@ -116,4 +115,9 @@
 
 .ColumnSection > div.ColumnList > div.ColumnHead > div.ButtonGroup > i.fa-xmark:hover{
     color: #ff4343;
+}
+
+.ColumnList > div.CardSection{
+    height: 75vh;
+    overflow-y: auto;
 }
