--- a/css/sidemenu.css
+++ b/css/sidemenu.css
@@ -13,18 +13,18 @@
     backdrop-filter: blur(2px);
 }
 
-.SideMenu > div.MenuHead{
+.MenuHead{
     display: flex;
     margin: 10% 10% 2% 10%;
 }
 
-.SideMenu > div.MenuHead > i.fa-xmark{
+.MenuHead > i.fa-xmark{
     margin-left: auto;
     color: #010101;
     cursor: pointer;
 }
 
-.SideMenu > div.MenuLog{
+.MenuLog{
     display: block;
     width: auto;
     height: 80%;
@@ -34,7 +34,7 @@
     margin: 0% 10% 0% 10%;
 }
 
-.SideMenu > div.MenuLog > div.LogCard{
+.LogCard{
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -50,11 +50,11 @@
     flex-grow: 0;
 }
 
-.SideMenu > div.MenuLog > div.LogCard > span.SmileIcon{
+.LogCard > span.SmileIcon{
     font-size: xx-large;
 }
 
-.SideMenu > div.MenuLog > div.LogCard > div.LogContent > div.CardUser{
+.CardUser{
     font-weight: 400;
     font-size: 16px;
     line-height: 23px;
@@ -66,10 +66,11 @@
     flex-grow: 0;
 }
 
-.SideMenu > div.MenuLog > div.LogCard > div.LogContent > div.CardBody{
+.LogContent > div.CardBody{
+    display: contents;
     margin: 2% 0% 2% 0%;
 
-    font-weight: 700;
+    font-weight: 400;
     font-size: 16px;
     line-height: 23px;
     
@@ -80,7 +81,7 @@
     flex-grow: 0;
 }
 
-.SideMenu > div.MenuLog > div.LogCard > div.LogContent > div.CardTime{
+.LogContent > div.CardTime{
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
