Design: 추가 버튼이 disabled 일 때 애니메이션 이펙트 추가
입력창이 비어있어서 추가하지 못할 때 추가버튼에 hover 하면 흔들기

--- a/src/components/TodoAddForm/todoaddform.css
+++ b/src/components/TodoAddForm/todoaddform.css
@@ -69,3 +69,14 @@
 .ok-btn[disabled] {
     opacity: 50%;
 }
+.ok-btn[disabled]:hover {
+    animation: horizontal-shaking 0.3s linear forwards;
+}
+
+@keyframes horizontal-shaking {
+    0% { transform: translateX(0) }
+    25% { transform: translateX(5px) }
+    50% { transform: translateX(-5px) }
+    75% { transform: translateX(5px) }
+    100% { transform: translateX(0) }
+}
