--- a/css/sidemenu.css
+++ b/css/sidemenu.css
@@ -1,94 +1,100 @@
-.SideMenu{
-    position: fixed;
-    visibility: hidden;
-    width: 25%;
-    height: 100%;
-    top: 0%;
-    right: -25%;
-    transition: all .7s ease-in-out;
-    
-    background: #FFFFFF;
-    
-    box-shadow: 0px 0px 4px rgba(204, 204, 204, 0.5), 0px 2px 4px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(2px);
+.SideMenu {
+  position: fixed;
+  visibility: show;
+  width: 25%;
+  height: 100%;
+  top: 0%;
+  right: 0%;
+  transition: all 0.7s ease-in-out;
+
+  background: #ffffff;
+
+  box-shadow: 0px 0px 4px rgba(204, 204, 204, 0.5),
+    0px 2px 4px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(2px);
 }
 
-.MenuHead{
-    display: flex;
-    margin: 10% 10% 2% 10%;
+.HiddenSideMenu {
+  visibility: hidden;
+  right: -25%;
 }
 
-.MenuHead > i.fa-xmark{
-    margin-left: auto;
-    color: #010101;
-    cursor: pointer;
+.MenuHead {
+  display: flex;
+  margin: 10% 10% 2% 10%;
 }
 
-.MenuLog{
-    display: block;
-    width: auto;
-    height: 80%;
-    overflow: scroll;
-    overflow-x: hidden;
-    overflow-y: auto;
-    margin: 0% 10% 0% 10%;
+.MenuHead > i.fa-xmark {
+  margin-left: auto;
+  color: #010101;
+  cursor: pointer;
 }
 
-.LogCard{
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 16px;
-    gap: 16px;
-    
-    height: 137px;
-    
-    background: #FFFFFF;
-    
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+.MenuLog {
+  display: block;
+  width: auto;
+  height: 80%;
+  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
+  margin: 0% 10% 0% 10%;
 }
 
-.LogCard > span.SmileIcon{
-    font-size: xx-large;
+.LogCard {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 16px;
+  gap: 16px;
+
+  height: 137px;
+
+  background: #ffffff;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
-.CardUser{
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 23px;
-    
-    color: #010101;
-    
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+.LogCard > span.SmileIcon {
+  font-size: xx-large;
 }
 
-.LogContent > div.CardBody{
-    display: contents;
-    margin: 2% 0% 2% 0%;
+.CardUser {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 23px;
 
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 23px;
-    
-    color: #010101;
-    
-    flex: none;
-    order: 1;
-    flex-grow: 0;
+  color: #010101;
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
 }
 
-.LogContent > div.CardTime{
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    
-    color: #828282;
-    
-    flex: none;
-    order: 2;
-    flex-grow: 0;
+.LogContent > div.CardBody {
+  display: contents;
+  margin: 2% 0% 2% 0%;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 23px;
+
+  color: #010101;
+
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.LogContent > div.CardTime {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+
+  color: #828282;
+
+  flex: none;
+  order: 2;
+  flex-grow: 0;
 }
