--- a/css/fab.css
+++ b/css/fab.css
@@ -10,6 +10,27 @@
   align-items: center;
   background-color: #0075de;
   color: #ffffff;
+  border-radius: 64px;
+  cursor: pointer;
+  transition: all 0.5s;
+  box-shadow: 0px 0px 4px rgba(204, 204, 204, 0.5),
+    0px 2px 4px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(2px);
+  transition: all 0.5s;
+}
+
+.FabBtn {
+  position: absolute;
+  left: 95%;
+  top: 90%;
+  transform: translate(-50%, -50%);
+  width: 64px;
+  height: 64px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0075de;
+  color: #ffffff;
   border-radius: 40px;
   cursor: pointer;
   transition: all 0.5s;
@@ -22,6 +43,24 @@
 .FabButton:hover {
   width: 80px;
   height: 80px;
+}
+
+.FabButton > i.fa-plus {
+  transition: all 0.7s;
+}
+
+.FabMenuOn {
+  width: 80px;
+  height: 80px;
+}
+
+.FabMenuOn .fa-plus {
+  transform: rotate(45deg);
+}
+
+.LightMode .FabBtn:hover {
+  width: 72px;
+  height: 72px;
 }
 
 .ModalAlert > input.ModalInput {
