Feat : 토스트 기능 추가 및 테스트 코드 작성
ToastManager.js: 토스트 기능을 위한 싱글톤 매니저
App.js: 길게 누르기 이벤트에 따라 토스트 띄우기 테스트 코드

그 외 core.css 를 app.css 와 분리

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 @import url("./src/components/TodoAddForm/todoaddform.css");
 @import url("./src/components/TodoCard/todocard.css");
 @import url("./src/app.css");
+@import url("./src/core/core.css");
 
 body {
     background-color: #F5F5F7;
