카드 LongClick 배경 애니메이션 및 토스트 추가

--- a/src/components/TodoCard/todocard.css
+++ b/src/components/TodoCard/todocard.css
@@ -1,4 +1,5 @@
 [data-component="TodoCard"] {
+    position: relative;
     width: 230px;
     background: #FFFFFF;
     box-shadow: 0 1px 30px rgba(224, 224, 224, 0.5);
@@ -122,4 +123,28 @@
 
 .edit .todocard-author {
     display: none;
+}
+
+.progress-click{
+    position: absolute;
+    background-color: aqua;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
+
+.progress-click.on {
+    background-color: #FF8886;
+    opacity: 0.5;
+    animation: progress 1s linear;
+    animation-fill-mode: backwards;
+}
+
+@keyframes progress{
+    from{
+        width: 0%;
+    }
+    to{
+        width: 100%;
+    }
 }
