--- a/src/components/TodoCard/todocard.css
+++ b/src/components/TodoCard/todocard.css
@@ -141,10 +141,6 @@
 }
 
 @keyframes progress{
-    from{
-        width: 0%;
-    }
-    to{
-        width: 100%;
-    }
+    from { width: 0%; }
+    to { width: 100%; }
 }
