Feat : 네트워크가 느릴 때 사용자 인터렉션을 블락 하도록 추가

--- a/src/components/TodoCard/todocard.css
+++ b/src/components/TodoCard/todocard.css
@@ -136,11 +136,25 @@
 .progress-click.on {
     background-color: #FF8886;
     opacity: 0.5;
-    animation: progress 1s linear;
-    animation-fill-mode: backwards;
+    animation: progress 0.8s linear;
+    animation-fill-mode: forwards;
 }
 
 @keyframes progress{
     from { width: 0%; }
     to { width: 100%; }
+}
+
+[data-component="TodoCard"][data-todo-id="-1"] {
+    opacity: 0 !important;
+    height: 100px
+}
+
+.pending [data-component="TodoCard"] {
+    animation: pending-animation 0.3s linear alternate infinite;
+}
+
+@keyframes pending-animation {
+    0% { opacity: 0.7 }
+    100% { opacity: 0.4 }
 }
